# crazyflie_ctl

install/: local_setup.sh  setup.sh
install/crazyflie/lib/crazyflie/: aideck_streamer.py  battery  cfmult.py  chooser.py  comCheck  console  crazyflie_server  crazyflie_server.py  downloadUSDLogfile  flash.py  gui.py  listLogVariables  listMemories  listParams  log  reboot  scan  setParam  simple_mapper_multiranger.py  teleop  vel_mux.py  version
install/crazyflie/share/crazyflie/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/crazyflie_examples/lib/crazyflie_examples/: arming  cmd_full_state  figure8  group_mask  hello_world  infinite_flight  multi_trajectory  nice_hover  set_param  swap
install/crazyflie_examples/share/crazyflie_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/crazyflie_interfaces/share/crazyflie_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/crazyflie_py/share/crazyflie_py/: package.sh  package.xml
install/crazyflie_sim/lib/crazyflie_sim/: crazyflie_server
install/crazyflie_sim/share/crazyflie_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_control_package/lib/my_control_package/: battery_reader  hello_world
install/my_control_package/share/my_control_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vicon_receiver/lib/vicon_receiver/: vicon_client
install/vicon_receiver/share/vicon_receiver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
my_control_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
my_control_package/launch/: launch.py
my_control_package/my_control_package/: L_shape.py  battery_reader.py  circle.py  dip_detect.py  emergency_node.py  fake_detector.py  fake_target.py  gen_traj.py  hello_world.py  live_plot.py  path_follower.py  uav_trajectory.py
my_control_package/my_control_package/data/: drone1_traj_cim.csv  drone2_traj_cim.csv  traj1.csv  traj10.csv  traj11.csv  traj12.csv  traj14.csv  traj2.csv  traj6.csv  traj7.csv  traj8.csv  traj9.csv
(+565 files in other folders)
